--- a/.github/workflows/build-and-release-dataset.yml
+++ b/.github/workflows/build-and-release-dataset.yml
@@ -42,7 +42,7 @@ jobs:
           name: dvf-aggregated-datasets
           path: release/
 
-      - name: Create GitHub Release (optional)
+      - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v2
         with:
@@ -52,4 +52,4 @@ jobs:
             release/int-aggregated-houses-dvf.parquet
             release/int-aggregated-flats-dvf.parquet
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
